tests/should_fail/sf008_class_no_name.hs
-- Should fail: class declaration missing the class name
module Sf008ClassNoName where

class where
    method :: Int -> Int
